# WeatherAPI

./: .env  .env.example  Cargo.toml  README.md
src/: CLIWeatherApp.rs  main.rs  weather_api.rs  weather_app_ui.rs
