[package]
name = "Inirust"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "CLIWeatherApp"
path = "src/CLIWeatherApp.rs"


[dependencies]
reqwest = {version = "0.11" ,features = [ "blocking","json"]}
serde ={version = "1.0" , features = ["derive"]}
serde_json = "1.0"
colored = "2.0"
dotenvy = "0.15"
